kubernetes/apps/media/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: media
  labels:
    app: qui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: qui
