kubernetes/apps/media/qui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qui
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  rules:
    - host: qui.localcloud.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qui
                port:
                  number: 80
  tls:
    - hosts:
        - qui.localcloud.network
      secretName: qui-tls
